# code-ratchet

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
distribution/clawhub/: README.md  SKILL.md
examples/python/: README.md  code_ratchet.py  main.py  test_main.py
src/: baseline.rs  cli.rs  config.rs  feedback.rs  lib.rs  main.rs  metrics.rs
src/checks/: mod.rs
src/cmd/: check.rs  detect.rs  init.rs  install_hook.rs  mod.rs  setup.rs  status.rs  uninstall.rs  watch.rs
templates/: AGENTS.md  pre-commit.sh  ratchet.yml
tests/: integration.rs
