[package]
name = "code-ratchet"
version = "0.1.1"
edition = "2021"
rust-version = "1.74"
license = "MIT"
description = "A complexity ratchet for AI-assisted code: persisted quality metrics that only ever ratchet upward, with a git pre-commit gate and a single AGENTS.md rules file that any LLM/IDE can read."
authors = ["code-ratchet contributors"]
repository = "https://github.com/h4444433333/code-ratchet"
homepage = "https://github.com/h4444433333/code-ratchet"
documentation = "https://github.com/h4444433333/code-ratchet#readme"
readme = "README.md"
keywords = ["llm", "ai", "quality", "ratchet", "agents"]
categories = ["command-line-utilities", "development-tools::testing"]
include = [
    "src/**/*.rs",
    "templates/**",
    "tests/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[[bin]]
name = "code-ratchet"
path = "src/main.rs"

[lib]
name = "code_ratchet"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
